# neptune-sacred

./: .gitattributes  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/actions/e2e/: action.yml
.github/workflows/: ci.yml  publish.yml
neptune_sacred/: __init__.py  _version.py
neptune_sacred/impl/: __init__.py  utils.py
src/neptune_sacred/: __init__.py  _version.py
src/neptune_sacred/impl/: __init__.py  version.py
tests/: conftest.py  test_e2e.py
